Avances análisis descriptivo de variables categóricas + ETL

--- a/notebooks/etl_draft.ipynb
+++ b/notebooks/etl_draft.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import sys\n",
     "import ast\n",
+    "import logging\n",
     "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +247,7 @@
        "4  https://images.vivino.com/thumbs/D1Mf1fYnRnage...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +268,7 @@
        "(2026, 18)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +429,7 @@
        "1635  https://images.vivino.com/thumbs/TwuvDFXuToi7l...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -632,7 +633,7 @@
        "2  https://images.vivino.com/thumbs/Yt464jw0QS-ug...  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +808,7 @@
        "1  https://images.vivino.com/thumbs/Yt464jw0QS-ug...  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,178 +852,10 @@
     "            else:\n",
     "                raise TypeError(\"Only types supported are 'list' and 'dict'!\")\n",
     "        except (SyntaxError, ValueError):\n",
-    "            # Incorporar logging con error\n",
+    "            logging.error(f\"Error processing entry: {entry}\")\n",
     "            continue\n",
     "    return sorted(unique_values)\n",
     "\n",
-    "def split_list_cols(df, col):\n",
-    "    unique_values = extract_unique_values(df[col], type=\"list\")\n",
-    "    splitted_df = df.copy()\n",
-    "    for val in unique_values:\n",
-    "        splitted_df[val] = splitted_df[col].apply(\n",
-    "            lambda x: None if pd.isna(x) else 1 if val in ast.literal_eval(x) else 0\n",
-    "        ).astype(\"Int64\")\n",
-    "    return splitted_df.drop(columns=[col])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>wine_link</th>\n",
-       "      <th>name</th>\n",
-       "      <th>year</th>\n",
-       "      <th>winery</th>\n",
-       "      <th>rating</th>\n",
-       "      <th>rating_qty</th>\n",
-       "      <th>price</th>\n",
-       "      <th>body</th>\n",
-       "      <th>tannis</th>\n",
-       "      <th>sweetness</th>\n",
-       "      <th>...</th>\n",
-       "      <th>dried fruit</th>\n",
-       "      <th>earthy</th>\n",
-       "      <th>floral</th>\n",
-       "      <th>oaky</th>\n",
-       "      <th>red fruit</th>\n",
-       "      <th>spices</th>\n",
-       "      <th>tree fruit</th>\n",
-       "      <th>tropical</th>\n",
-       "      <th>vegetal</th>\n",
-       "      <th>yeasty</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>https://www.vivino.com/US/en/luigi-bosca-parai...</td>\n",
-       "      <td>Paraiso</td>\n",
-       "      <td>2020</td>\n",
-       "      <td>Luigi Bosca</td>\n",
-       "      <td>4.8</td>\n",
-       "      <td>582</td>\n",
-       "      <td>188.33</td>\n",
-       "      <td>0.7343</td>\n",
-       "      <td>0.5090</td>\n",
-       "      <td>0.1361</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.1250</td>\n",
-       "      <td>0.0500</td>\n",
-       "      <td>0.3250</td>\n",
-       "      <td>0.0500</td>\n",
-       "      <td>0.1000</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.000</td>\n",
-       "      <td>0.000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>2015</td>\n",
-       "      <td>Catena Zapata</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>297</td>\n",
-       "      <td>675.00</td>\n",
-       "      <td>0.7417</td>\n",
-       "      <td>0.5583</td>\n",
-       "      <td>0.1434</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.0964</td>\n",
-       "      <td>0.0241</td>\n",
-       "      <td>0.4378</td>\n",
-       "      <td>0.0843</td>\n",
-       "      <td>0.1004</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.008</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>https://www.vivino.com/US/en/catena-zapata-est...</td>\n",
-       "      <td>Estiba Reservada</td>\n",
-       "      <td>2017</td>\n",
-       "      <td>Catena Zapata</td>\n",
-       "      <td>4.7</td>\n",
-       "      <td>219</td>\n",
-       "      <td>580.00</td>\n",
-       "      <td>0.7417</td>\n",
-       "      <td>0.5583</td>\n",
-       "      <td>0.1434</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.012</td>\n",
-       "      <td>0.0964</td>\n",
-       "      <td>0.0241</td>\n",
-       "      <td>0.4378</td>\n",
-       "      <td>0.0843</td>\n",
-       "      <td>0.1004</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.004</td>\n",
-       "      <td>0.008</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                           wine_link              name  year  \\\n",
-       "0  https://www.vivino.com/US/en/luigi-bosca-parai...           Paraiso  2020   \n",
-       "1  https://www.vivino.com/US/en/catena-zapata-est...  Estiba Reservada  2015   \n",
-       "2  https://www.vivino.com/US/en/catena-zapata-est...  Estiba Reservada  2017   \n",
-       "\n",
-       "          winery  rating  rating_qty   price    body  tannis  sweetness  ...  \\\n",
-       "0    Luigi Bosca     4.8         582  188.33  0.7343  0.5090     0.1361  ...   \n",
-       "1  Catena Zapata     4.7         297  675.00  0.7417  0.5583     0.1434  ...   \n",
-       "2  Catena Zapata     4.7         219  580.00  0.7417  0.5583     0.1434  ...   \n",
-       "\n",
-       "   dried fruit  earthy  floral    oaky red fruit  spices tree fruit  tropical  \\\n",
-       "0        0.000  0.1250  0.0500  0.3250    0.0500  0.1000        0.0       0.0   \n",
-       "1        0.012  0.0964  0.0241  0.4378    0.0843  0.1004        0.0       0.0   \n",
-       "2        0.012  0.0964  0.0241  0.4378    0.0843  0.1004        0.0       0.0   \n",
-       "\n",
-       "   vegetal  yeasty  \n",
-       "0    0.000   0.000  \n",
-       "1    0.004   0.008  \n",
-       "2    0.004   0.008  \n",
-       "\n",
-       "[3 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Notes\n",
     "def split_normalize_notes(df):\n",
     "    unique_notes = extract_unique_values(df[\"notes\"], type=\"dict\")\n",
     "    \n",
@@ -1035,18 +868,54 @@
     "\n",
     "    note_sums = splitted_df[unique_notes].sum(axis=1)\n",
     "    splitted_df[unique_notes] = splitted_df[unique_notes].div(note_sums, axis=0).fillna(0).round(4) # Normaliza\n",
-    "    return splitted_df.drop(columns=[\"notes\"])\n",
+    "    return splitted_df.drop(columns=[\"notes\"]), unique_notes\n",
     "\n",
-    "# Aplicar la función al DataFrame\n",
-    "winesdf_note = split_normalize_notes(winesdf_taste)\n",
-    "winesdf_note.head(3)"
+    "def split_list_cols(df, col):\n",
+    "    unique_values = extract_unique_values(df[col], type=\"list\")\n",
+    "    splitted_df = df.copy()\n",
+    "    for val in unique_values:\n",
+    "        splitted_df[val] = splitted_df[col].apply(\n",
+    "            lambda x: None if pd.isna(x) else 1 if val in ast.literal_eval(x) else 0\n",
+    "        ).astype(\"Int64\")\n",
+    "    return splitted_df.drop(columns=[col]), unique_values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ageing', 'black fruit', 'citrus', 'dried fruit', 'earthy', 'floral', 'oaky', 'red fruit', 'spices', 'tree fruit', 'tropical', 'vegetal', 'yeasty']\n",
+      "Archivo guardado en: ../src/data/processed/aux/notes.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Notes\n",
+    "winesdf_note, notes = split_normalize_notes(winesdf_taste)\n",
+    "winesdf_note.head(3)\n",
+    "print(notes)\n",
+    "ut.save_csv(pd.DataFrame(notes, columns=[\"notes\"]), path=\"../src/data/processed/aux/\", filename=\"notes.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archivo guardado en: ../src/data/processed/aux/pairings.csv\n",
+      "Archivo guardado en: ../src/data/processed/aux/grapes.csv\n",
+      "Archivo guardado en: ../src/data/processed/aux/region.csv\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1193,7 +1062,7 @@
        "[3 rows x 119 columns]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1207,7 +1076,8 @@
     "winedf_tra = winesdf_note.copy()\n",
     "\n",
     "for col in list_columns:\n",
-    "    winedf_tra = split_list_cols(winedf_tra, col)\n",
+    "    winedf_tra, unique_vals = split_list_cols(winedf_tra, col)\n",
+    "    ut.save_csv(pd.DataFrame(unique_vals, columns=[f\"{col}\"]), path=\"../src/data/processed/aux/\", filename=f\"{col}.csv\")\n",
     "\n",
     "# winedf_tra[extract_unique_values(winesdf_note[\"region\"], \"list\")].head() # Revisar valores de una list col\n",
     "\n",
@@ -1216,7 +1086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1235,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1583,7 +1453,7 @@
        "[2026 rows x 20 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1594,7 +1464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1615,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
