Avance descriptive analysis hasta pairings

--- a/notebooks/EDA/03_relationship_analysis.ipynb
+++ b/notebooks/EDA/03_relationship_analysis.ipynb
@@ -1869,6 +1869,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7ab9d35d",
+   "metadata": {},
+   "source": [
+    "- ¿Hay maridajes correlacionados entre si?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "a871e007",
