Avances relationship analysis

--- a/notebooks/EDA/03_relationship_analysis.ipynb
+++ b/notebooks/EDA/03_relationship_analysis.ipynb
@@ -725,20 +725,23 @@
    "id": "adb7e036",
    "metadata": {},
    "source": [
-    "### Matrices de Correlación\n",
+    "## 01 | Matrices de Correlación\n",
     "\n",
     "- ¿Qué variables tienen una alta correlación con el rating de los vinos?\n",
     "- ¿Qué notas, maridajes y uvas, regions tienen alta correlación con el rating?\n",
     "\n",
-    "<br>\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8865a210",
+   "metadata": {},
+   "source": [
+    "**Wine Features**\n",
     "> Las variables que mayor correlación tienen con el rating de un vino son el precio y el cuerpo del vino. Sin embargo, será que la calidad del vino determina el precio? O es la percepción de un vino caro que hace que los usuarios lo valoren en mayor medida?\n",
     "\n",
-    "> Por otro lado, es notorio cómo se intensifican ciertas correlaciones cuando se calculan a partir de Spearman. Sobre todo, destaca el aumento drástico de la correlación con el precio, el rating_qty y year. Esto indica que el rating tiene una mayor correlación no lineal.\n",
-    "\n",
-    "<br>\n",
-    "\n",
-    "---"
+    "> Por otro lado, es notorio cómo se intensifican ciertas correlaciones cuando se calculan a partir de Spearman. Sobre todo, destaca el aumento drástico de la correlación con el precio, el rating_qty y year. Esto indica que el rating tiene una mayor correlación no lineal."
    ]
   },
   {
@@ -941,6 +944,16 @@
    ],
    "source": [
     "corr_rating_features.to_frame().join(corr_rating_features_spr.to_frame(), lsuffix=\"_pearson\", rsuffix=\"_spearman\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ffb21969",
+   "metadata": {},
+   "source": [
+    "**Notes**\n",
+    "\n",
+    "> Highlights de notes con ratings"
    ]
   },
   {
@@ -1177,6 +1190,26 @@
    ],
    "source": [
     "corr_notes_rating.to_frame().join(corr_notes_rating_spr.to_frame(), lsuffix=\"_pearson\", rsuffix=\"_spearman\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19f9877d",
+   "metadata": {},
+   "source": [
+    "**Pairings**\n",
+    "\n",
+    "> Highlights de Pairings con ratings"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6fb3708",
+   "metadata": {},
+   "source": [
+    "## Seccion 2\n",
+    "\n",
+    "---"
    ]
   },
   {
