Adjustments to main

--- a/notebooks/EDA/03_relationship_analysis.ipynb
+++ b/notebooks/EDA/03_relationship_analysis.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "fbcb226d",
    "metadata": {},
    "outputs": [],
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "6cab9723",
    "metadata": {},
    "outputs": [],
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "94f1a8cf",
    "metadata": {},
    "outputs": [
@@ -709,7 +709,7 @@
        "2          0           0                  0             0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -729,6 +729,7 @@
     "\n",
     "- ¿Qué variables tienen una alta correlación con el rating de los vinos?\n",
     "- ¿Qué notas, maridajes y uvas, regions tienen alta correlación con el rating?\n",
+    "- ¿Cambia el panorama al medir correlaciones lineales y no lineales?\n",
     "\n",
     "---"
    ]
@@ -739,14 +740,24 @@
    "metadata": {},
    "source": [
     "**Wine Features**\n",
-    "> Las variables que mayor correlación tienen con el rating de un vino son el precio y el cuerpo del vino. Sin embargo, será que la calidad del vino determina el precio? O es la percepción de un vino caro que hace que los usuarios lo valoren en mayor medida?\n",
     "\n",
-    "> Por otro lado, es notorio cómo se intensifican ciertas correlaciones cuando se calculan a partir de Spearman. Sobre todo, destaca el aumento drástico de la correlación con el precio, el rating_qty y year. Esto indica que el rating tiene una mayor correlación no lineal."
+    "Rating Main Correlations\n",
+    "> - Las variables que mayor correlación tienen con el rating de un vino son el precio y el cuerpo del vino.\n",
+    "\n",
+    "> - Sin embargo, será que la calidad del vino determina el precio? O es la percepción de un vino caro que hace que los usuarios lo valoren en mayor medida?\n",
+    "\n",
+    "> - Spearman: es notoria la intensificación de correlación con el precio, rating_qty y el año (year), indicando que existe una mayor correlación no lineal.\n",
+    "\n",
+    "Otras features\n",
+    "> - Respecto al restro de features, vemos como:\n",
+    ">   - El cuerpo (body) de un vino se relaciona con una mayor cantidad de alcohol.\n",
+    ">   - Los taninos y la acidez van de la mano.\n",
+    ">   - El año tiene una correlación no lineal negativa con el rating y el precio, indicando mejores vinos añejados a priori."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "id": "c076b435",
    "metadata": {},
    "outputs": [
@@ -798,7 +809,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 6,
    "id": "15a37d22",
    "metadata": {},
    "outputs": [
@@ -845,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 7,
    "id": "56bc7971",
    "metadata": {},
    "outputs": [
@@ -937,7 +948,7 @@
        "year             -0.064924        -0.431385"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -958,7 +969,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 8,
    "id": "1f5bc2e3",
    "metadata": {},
    "outputs": [
@@ -1011,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 9,
    "id": "6d28c179",
    "metadata": {},
    "outputs": [
@@ -1061,7 +1072,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 10,
    "id": "e78b603e",
    "metadata": {},
    "outputs": [
@@ -1183,7 +1194,7 @@
        "red fruit         -0.202485        -0.246677"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1224,11 +1235,11 @@
     "\n",
     "<br>\n",
     "\n",
-    "> No parece haber una relación clara entre la cantidad de ratings y el rating en si de un vino (R^2 es 0.02).\n",
+    "> No parece haber una relación lineal clara entre la cantidad de ratings y el rating en si de un vino (R^2 es 0.02).\n",
     "\n",
-    "> Si parece que hay bastantes vinos donde la cantidad de ratings es mayor y que rondan en un rating de al rededor de 4.1.\n",
+    "> Sí parece que hay bastantes vinos donde la cantidad de ratings es mayor y que rondan en un rating de al rededor de 4.1.\n",
     "\n",
-    "> Sin embargo, Rating Quantity no parece ser una variable que explique claramente al Rating.\n",
+    "> Sin embargo, Rating Quantity no parece ser una variable que explique linealmente al Rating.\n",
     "\n",
     "<br>\n",
     "\n",
@@ -1237,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "3d0a7002",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "f94cf588",
    "metadata": {},
    "outputs": [],
@@ -1311,7 +1322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "3258f4db",
    "metadata": {},
    "outputs": [
@@ -1350,7 +1361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "80b427ae",
    "metadata": {},
    "outputs": [
@@ -1411,7 +1422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "ce40ba58",
    "metadata": {},
    "outputs": [
@@ -1464,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "a871e007",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "id": "30dde664",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1535,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m grapes_melted = wines.melt(id_vars=pairing_cols,\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m                            value_vars=\u001b[43mgrape_cols\u001b[49m,\n\u001b[32m      3\u001b[39m                            var_name=\u001b[33m'\u001b[39m\u001b[33mgrape\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      4\u001b[39m                            value_name=\u001b[33m'\u001b[39m\u001b[33mis_grape\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      7\u001b[39m grapes_melted = grapes_melted[grapes_melted[\u001b[33m'\u001b[39m\u001b[33mis_grape\u001b[39m\u001b[33m'\u001b[39m] == \u001b[32m1\u001b[39m]\n\u001b[32m      8\u001b[39m grape_pairing_freq = grapes_melted.groupby(\u001b[33m'\u001b[39m\u001b[33mgrape\u001b[39m\u001b[33m'\u001b[39m)[pairing_cols].mean()\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[17]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m grapes_melted = wines.melt(id_vars=pairing_cols,\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m                            value_vars=\u001b[43mgrape_cols\u001b[49m,\n\u001b[32m      3\u001b[39m                            var_name=\u001b[33m'\u001b[39m\u001b[33mgrape\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m      4\u001b[39m                            value_name=\u001b[33m'\u001b[39m\u001b[33mis_grape\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      7\u001b[39m grapes_melted = grapes_melted[grapes_melted[\u001b[33m'\u001b[39m\u001b[33mis_grape\u001b[39m\u001b[33m'\u001b[39m] == \u001b[32m1\u001b[39m]\n\u001b[32m      8\u001b[39m grape_pairing_freq = grapes_melted.groupby(\u001b[33m'\u001b[39m\u001b[33mgrape\u001b[39m\u001b[33m'\u001b[39m)[pairing_cols].mean()\n",
       "\u001b[31mNameError\u001b[39m: name 'grape_cols' is not defined"
      ]
     }
