--- a/notebooks/etl_draft.ipynb
+++ b/notebooks/etl_draft.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -904,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1062,7 +1062,7 @@
        "[3 rows x 119 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,6 +1077,10 @@
     "\n",
     "for col in list_columns:\n",
     "    winedf_tra, unique_vals = split_list_cols(winedf_tra, col)\n",
+    "    \n",
+    "    if col == \"grapes\":\n",
+    "        unique_vals.remove(\"Pedro Giménez\")\n",
+    "\n",
     "    ut.save_csv(pd.DataFrame(unique_vals, columns=[f\"{col}\"]), path=\"../src/data/processed/aux/\", filename=f\"{col}.csv\")\n",
     "\n",
     "# winedf_tra[extract_unique_values(winesdf_note[\"region\"], \"list\")].head() # Revisar valores de una list col\n",
@@ -1086,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
