Avances Relationship Analysis

--- a/notebooks/EDA/03_relationship_analysis.ipynb
+++ b/notebooks/EDA/03_relationship_analysis.ipynb
@@ -2468,6 +2468,35 @@
    "source": [
     "## Seccion 2\n",
     "\n",
+    "Co-ocurrencia de:\n",
+    "1. Pairings y Uvas\n",
+    "2. Pairings y Sabores\n",
+    "3. Pairings y Notas\n",
+    "4. Uvas y Sabores\n",
+    "5. Uvas y Notas\n",
+    "6. Sabores y Notas\n",
+    "\n",
+    "\n",
+    "Perfiles de sabores y rating\n",
+    "Combinaciones de \n",
+    "1. Body alto/bajo\n",
+    "2. Acidez alta/baja\n",
+    "3. tannis alto/bajo\n",
+    "4. Dulzor alto/bajo\n",
+    "\n",
+    "Perfil de maridaje y rating\n",
+    "1. Maridajes que van de la mano y como van con el rating\n",
+    "\n",
+    "\n",
+    "\n",
+    "Wine Features y Notes: alta relación con rating\n",
+    "\n",
+    "Pairings: intermedio\n",
+    "\n",
+    "Region y Grapes: baja relación con rating\n",
+    "\n",
+    "[Ideas con ChatGPT](https://chatgpt.com/share/6813f373-84b0-8009-a4c3-9f1dab145013)\n",
+    "\n",
     "---"
    ]
   },
