Limpié advanced analysis para empezar a trabajarlo ahí

--- a/notebooks/EDA/02_descriptive_analysis.ipynb
+++ b/notebooks/EDA/02_descriptive_analysis.ipynb
@@ -12,9 +12,8 @@
     "<br>\n",
     "\n",
     "Se encarga de responder preguntas como:\n",
-    "- ¿Cuál es el valor más frecuente?\n",
+    "- ¿Cuáles con los valores más frecuentes?\n",
     "- ¿Cómo es la distribución de los datos (normal, tirada a la derecha/izquierda, etc)?\n",
-    "- ¿Cómo se relacionan las variables?\n",
     "\n",
     "<br>\n",
     "\n",
@@ -751,7 +750,6 @@
    "source": [
     "### Rating\n",
     "- ¿Cuales son los ratings más comunes?\n",
-    "- ¿El rating se relaciona con la cantidad de ratings?\n",
     "- ¿El rating es un buen parámetro para la recomendación de vinos?\n",
     "- ¿La cantidad de ratings se relaciona con un buen rating?\n",
     "<br>\n",
