Terminé Kmeans Notes

--- a/notebooks/EDA/04_advanced_analysis.ipynb
+++ b/notebooks/EDA/04_advanced_analysis.ipynb
@@ -780,15 +780,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "631661dd",
+   "id": "1891c8e6",
    "metadata": {},
    "source": [
-    "### Notas"
+    "### Funciones"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 5,
    "id": "8b639aae",
    "metadata": {},
    "outputs": [],
@@ -797,14 +797,6 @@
     "\n",
     "# https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html#sklearn.cluster.KMeans\n",
     "# https://pandas.pydata.org/docs/reference/api/pandas.melt.html\n",
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "notes = pd.read_csv(\"../../src/data/processed/aux/notes.csv\")\n",
-    "notes = notes[\"notes\"]\n",
-    "notes = wines[notes].copy()\n",
-    "notes_array = np.array(notes)\n",
-    "kmeans_notes = KMeans(n_clusters=4, random_state=0, n_init=\"auto\", max_iter=300).fit(notes_array)\n",
-    "\n",
     "\n",
     "def viz_cluster(features_df=None, cluster_algorithm=None, var_name=\"Variable\"):\n",
     "    cluster_centers_df = pd.DataFrame(cluster_algorithm.cluster_centers_, columns=features_df.columns)\n",
@@ -844,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 6,
    "id": "65a72272",
    "metadata": {},
    "outputs": [],
@@ -924,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 7,
    "id": "c6aff439",
    "metadata": {},
    "outputs": [],
@@ -960,9 +952,189 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "762d1995",
+   "metadata": {},
+   "source": [
+    "### Notas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ecd3ab3",
+   "metadata": {},
+   "source": [
+    "__Kmeans__"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 46,
    "id": "511b46d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "notes = pd.read_csv(\"../../src/data/processed/aux/notes.csv\")\n",
+    "notes = notes[\"notes\"]\n",
+    "notes = wines[notes].copy()\n",
+    "notes_array = np.array(notes)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8c7fd63",
+   "metadata": {},
+   "source": [
+    "__Resumen de Métricas de Evaluación de Clusters__\n",
+    "\n",
+    "| Métrica               | Qué mide                                                 | Cuanto más...   | Ideal      |\n",
+    "| --------------------- | -------------------------------------------------------- | --------------- | ---------- |\n",
+    "| **Silhouette Score**  | Separación y cohesión (distancia entre e intra clusters) | **alto**, mejor | Cerca de 1 |\n",
+    "| **Davies-Bouldin**    | Similitud entre clusters (relación centro-dispersión)    | **bajo**, mejor | Cerca de 0 |\n",
+    "| **Calinski-Harabasz** | Variación entre clusters vs dentro de ellos              | **alto**, mejor | Grande     |\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "345f193e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Silhouette</th>\n",
+       "      <th>DB Score</th>\n",
+       "      <th>CH Score</th>\n",
+       "      <th>k</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.554807</td>\n",
+       "      <td>0.998278</td>\n",
+       "      <td>1157.236698</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.552339</td>\n",
+       "      <td>0.963485</td>\n",
+       "      <td>999.803361</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.527471</td>\n",
+       "      <td>1.098182</td>\n",
+       "      <td>795.750833</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.548136</td>\n",
+       "      <td>0.913489</td>\n",
+       "      <td>713.375309</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.290410</td>\n",
+       "      <td>1.131896</td>\n",
+       "      <td>700.084292</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.288366</td>\n",
+       "      <td>1.168800</td>\n",
+       "      <td>651.528801</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.278001</td>\n",
+       "      <td>1.259158</td>\n",
+       "      <td>592.597127</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.286911</td>\n",
+       "      <td>1.161221</td>\n",
+       "      <td>567.992734</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.292971</td>\n",
+       "      <td>1.125934</td>\n",
+       "      <td>530.563499</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Silhouette  DB Score     CH Score   k\n",
+       "0    0.554807  0.998278  1157.236698   2\n",
+       "1    0.552339  0.963485   999.803361   3\n",
+       "2    0.527471  1.098182   795.750833   4\n",
+       "3    0.548136  0.913489   713.375309   5\n",
+       "4    0.290410  1.131896   700.084292   6\n",
+       "5    0.288366  1.168800   651.528801   7\n",
+       "6    0.278001  1.259158   592.597127   8\n",
+       "7    0.286911  1.161221   567.992734   9\n",
+       "8    0.292971  1.125934   530.563499  10"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = notes_array\n",
+    "results = []\n",
+    "\n",
+    "for k in range(2,11):\n",
+    "    kmeans_notes = KMeans(n_clusters=k, random_state=0, n_init=\"auto\").fit(notes_array)\n",
+    "    labels = kmeans_notes.labels_\n",
+    "    note_eval = eval_cluster(X, labels)\n",
+    "    note_eval[\"k\"] = k\n",
+    "    results.append(note_eval)\n",
+    "\n",
+    "note_eval_df = pd.DataFrame(results)\n",
+    "   \n",
+    "note_eval_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "ef133198",
    "metadata": {},
    "outputs": [
     {
@@ -984,35 +1156,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Silhouette': np.float64(0.5274714324770833), 'DB Score': np.float64(1.0981821264122795), 'CH Score': np.float64(795.7508326862702)}\n"
-     ]
     }
    ],
    "source": [
-    "from sklearn.cluster import KMeans\n",
-    "\n",
-    "notes = pd.read_csv(\"../../src/data/processed/aux/notes.csv\")\n",
-    "notes = notes[\"notes\"]\n",
-    "notes = wines[notes].copy()\n",
-    "notes_array = np.array(notes)\n",
-    "kmeans_notes = KMeans(n_clusters=4, random_state=0, n_init=\"auto\", max_iter=300).fit(notes_array)\n",
+    "# K seleccionado: 4\n",
+    "kmeans_notes = KMeans(n_clusters=4, random_state=0, n_init=\"auto\").fit(notes_array)\n",
     "\n",
     "note_bars = viz_cluster(notes, kmeans_notes, \"Notes\")\n",
     "plt.show()\n",
     "\n",
     "fig = pca_viz_cluster(2, notes_array, kmeans_notes, var_name=\"Notes\")\n",
-    "plt.show()\n",
-    "\n",
-    "\n",
-    "X = notes_array\n",
-    "labels = kmeans_notes.labels_\n",
-    "note_eval = eval_cluster(X, labels)\n",
-    "print(note_eval)"
+    "plt.show()"
    ]
   },
   {
